--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attr==0.3.2
 ConfigParser==7.1.0
 contextlib2==21.6.0
 cryptography==43.0.1
+Cython==3.0.11
 dl==0.1.0
 docutils==0.21.2
 filelock==3.16.1
