--- a/.github/workflows/metrics_weekly.yml
+++ b/.github/workflows/metrics_weekly.yml
@@ -26,7 +26,7 @@ jobs:
 
     # Step 3: Create service_account.json from the secret
     - name: Create service_account.json
-      run: echo "${{ secrets.SERVICE_ACCOUNT }}" > | jq '.' > service_account.json
+      run: echo "${{ secrets.SERVICE_ACCOUNT }} > | jq '.' > service_account.json"
 
     # Step 4: Install dependencies
     - name: Install dependencies
